Updated DarkMode.css & Portfolio.html
Finished nav bar base

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -13,11 +13,11 @@
         <body>
             <div class="navbar">
                 <ul class="navbar">
-                    <li class="navbar" style="float: right;"><a href="Portfolio.html">Test</a></li>
-                    <li class="navbar"><a href="Portfolio.html">Test</a></li>
-                    <li class="navbar"><a href="Portfolio.html">Test</a></li>
-                    <li class="navbar"><a href="Portfolio.html">Test</a></li>
-                    <li class="navbar"><a href="Portfolio.html">Test</a></li>
+                    <li style="float: left;"><a href="Home.html">Home Page</a></li>
+                    <li class="active"><a href="Portfolio.html">My Portfolio</a></li>
+                    <li><a href="Showcase.html">Cv2 Showcase</a></li>
+                    <li><a href="Resources.html">Outside Resources</a></li>
+                    <li><a href="Contact.html">Contact Me!</a></li>
                 </ul>
             </div>
         </body>
