--- a/Portfolio.html
+++ b/Portfolio.html
@@ -11,19 +11,21 @@
     </head>
 
         <body>
-            <div class="navbar">
-                <ul class="navbar">
+            <ul class="navbar">
                     <li style="float: left;"><a href="Home.html">Home Page</a></li>
                     <li class="active"><a href="Portfolio.html">My Portfolio</a></li>
                     <li><a href="Showcase.html">Cv2 Showcase</a></li>
                     <li><a href="Resources.html">Outside Resources</a></li>
                     <li><a href="Contact.html">Contact Me!</a></li>
-                </ul>
-            </div>
+            </ul>
+
+            <P>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </P>
         </body>
 <br><br><br><br><br>
     <footer>
-        Hello World! Test 1
+        Hello World! Test 3
     </footer>
 
 </html>
