--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
         <body>
             <ul class="navbar">
-                    <li style="float: left;"><a href="Home.html">Home Page</a></li>
-                    <li class="active"><a href="Portfolio.html">My Portfolio</a></li>
+                    <li class: "active" style="float: left;"><a href="index.html">Home Page</a></li>
+                    <li><a href="Portfolio.html">My Portfolio</a></li>
                     <li><a href="Showcase.html">Cv2 Showcase</a></li>
                     <li><a href="Resources.html">Outside Resources</a></li>
                     <li><a href="Contact.html">Contact Me!</a></li>
