--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <link type="text/css" rel="stylesheet" href="DarkMode.css" media="screen" />
         <title>
-            DotDuke | Portfolio
+            DotDuke | Home
         </title>
     </head>
 
@@ -18,26 +18,25 @@
                     <li><a href="Resources.html">Outside Resources</a></li>
                     <li><a href="Contact.html">Contact Me!</a></li>
             </ul>
+            <h1 align="center">Hey 👋, I'm .Duke, also known as Duke.Dev</h1>
+<br>
+            <h3 align="center">I code things, mostly in Rec Room using Cv2. Majority of my repos are private.</h3>
+<br><br><br><br><br>
+            <h3 align="center">Interested in the circuits side of Rec Room? Join me on my discord!</h3>
+            <p align="center">
+            <a href="https://discord.gg/TKpuRcuF8k" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/discord.svg" alt="TKpuRcuF8k" height="30" width="40" /></a>
+            </p>
+            <h3 align="center">What I'm Learning:</h3>
+            <p align="center"> 
 
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed faucibus turpis in eu mi bibendum neque. Ut enim blandit volutpat maecenas volutpat blandit aliquam. Adipiscing tristique risus nec feugiat in fermentum posuere urna nec. Egestas pretium aenean pharetra magna ac placerat. Risus quis varius quam quisque id diam vel quam. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Urna neque viverra justo nec ultrices dui sapien eget mi. At quis risus sed vulputate odio. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Convallis tellus id interdum velit laoreet. Eu lobortis elementum nibh tellus molestie nunc non. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper. Et malesuada fames ac turpis. Diam quam nulla porttitor massa id. Sit amet consectetur adipiscing elit ut. Enim ut tellus elementum sagittis vitae. Nisl suscipit adipiscing bibendum est. Libero volutpat sed cras ornare arcu dui. Dolor sit amet consectetur adipiscing elit duis.
-            </p>
-<br><br>
-            <p>
-                Ac auctor augue mauris augue neque gravida in fermentum et. Nunc sed velit dignissim sodales ut eu. Venenatis a condimentum vitae sapien pellentesque habitant morbi tristique. Volutpat blandit aliquam etiam erat. Enim ut tellus elementum sagittis. Magna eget est lorem ipsum. Sollicitudin ac orci phasellus egestas tellus. Maecenas pharetra convallis posuere morbi leo urna. Accumsan tortor posuere ac ut consequat semper. Nulla facilisi nullam vehicula ipsum. Consectetur adipiscing elit ut aliquam purus sit. Duis at tellus at urna condimentum mattis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Natoque penatibus et magnis dis parturient montes nascetur ridiculus. At imperdiet dui accumsan sit. Auctor augue mauris augue neque gravida in fermentum et. Purus semper eget duis at.
-            </p>
-<br><br>
-            <p>
-                Luctus venenatis lectus magna fringilla urna porttitor. Euismod elementum nisi quis eleifend quam. Convallis aenean et tortor at risus viverra adipiscing at in. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non. Adipiscing elit duis tristique sollicitudin. Sit amet consectetur adipiscing elit duis. Tincidunt lobortis feugiat vivamus at augue. Magna etiam tempor orci eu lobortis elementum nibh. Rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Egestas pretium aenean pharetra magna ac placerat. Quis enim lobortis scelerisque fermentum dui. Facilisi cras fermentum odio eu feugiat pretium. Faucibus purus in massa tempor nec feugiat. Adipiscing vitae proin sagittis nisl.
-            </p>
-<br><br>
-            <p>
-                Ac tortor dignissim convallis aenean et tortor at risus viverra. Convallis a cras semper auctor neque vitae. At erat pellentesque adipiscing commodo elit. Vitae nunc sed velit dignissim sodales ut eu. Sed tempus urna et pharetra pharetra massa massa ultricies. Ut placerat orci nulla pellentesque dignissim enim sit amet. Molestie ac feugiat sed lectus vestibulum. Sed pulvinar proin gravida hendrerit lectus a. Quis risus sed vulputate odio. Eros in cursus turpis massa tincidunt dui ut ornare lectus. Massa placerat duis ultricies lacus sed turpis tincidunt id. Ultricies leo integer malesuada nunc vel risus commodo viverra. Eu facilisis sed odio morbi quis. Morbi leo urna molestie at elementum eu. Faucibus vitae aliquet nec ullamcorper sit amet. Elementum nibh tellus molestie nunc non blandit massa.
-            </p>
-<br><br>
-            <p>
-                Id diam vel quam elementum pulvinar etiam. Ultrices sagittis orci a scelerisque purus semper eget duis at. Cras adipiscing enim eu turpis egestas. Risus feugiat in ante metus dictum. Iaculis nunc sed augue lacus viverra. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. Nulla malesuada pellentesque elit eget gravida cum. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat. Netus et malesuada fames ac turpis. Orci a scelerisque purus semper eget duis. Proin sagittis nisl rhoncus mattis rhoncus urna.
-            </p>
+            <p align="center"> 
+            <a href="https://www.w3schools.com/html/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg" alt="html5" width="40" height="40"/> </a>
+            <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg" alt="css3" width="40" height="40"/> </a>
+            <a href="https://www.w3schools.com/js/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/> </a>
+            <a href="https://www.w3schools.com/cs/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg" alt="csharp" width="40" height="40"/> </a>
+            <a href="https://www.w3schools.com/cpp/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-original.svg" alt="cplusplus" width="40" height="40"/> </a>
+            <a href="https://unrealengine.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/DukeDotDev/DukeDotDev/main/UE_Logo_icon-only_white.svg" alt="unrealengine5" width="40" height="40"/> </a>
+
         </body>
 <br><br><br><br><br>
     <footer>
