--- a/index.html
+++ b/index.html
@@ -11,34 +11,31 @@
     </head>
 
         <body>
-            <ul class="navbar">
-                    <li class: "active" style="float: left;"><a href="index.html">Home Page</a></li>
+            <ul>
+                    <li  class="active" style="float: left;"><a href="index.html">Home Page</a></li>
                     <li><a href="Portfolio.html">My Portfolio</a></li>
                     <li><a href="Showcase.html">Cv2 Showcase</a></li>
                     <li><a href="Resources.html">Outside Resources</a></li>
                     <li><a href="Contact.html">Contact Me!</a></li>
             </ul>
-            <h1 align="center">Hey 👋, I'm .Duke, also known as Duke.Dev</h1>
-<br>
-            <h3 align="center">I code things, mostly in Rec Room using Cv2. Majority of my repos are private.</h3>
-<br><br><br><br><br>
-            <h3 align="center">Interested in the circuits side of Rec Room? Join me on my discord!</h3>
-            <p align="center">
-            <a href="https://discord.gg/TKpuRcuF8k" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/discord.svg" alt="TKpuRcuF8k" height="30" width="40" /></a>
+            <h1 class="center">Hey 👋, I'm .Duke, also known as Duke.Dev</h1>
+            <h3 class="center">I code things, mostly in Rec Room using Cv2. If you're looking for some help with Cv2, you've come to the right place!</h3>
+            <h3 class="center">Want to join my community? Go to this discord!</h3>
+            <p class="center">
+            <a href="https://discord.gg/TKpuRcuF8k" target="blank"><img class="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/discord.svg" alt="TKpuRcuF8k" height="30" width="40" /></a>
             </p>
-            <h3 align="center">What I'm Learning:</h3>
-            <p align="center"> 
-
-            <p align="center"> 
+            <h3 class="center">What I'm Learning:</h3>
+            <p class="center">
             <a href="https://www.w3schools.com/html/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg" alt="html5" width="40" height="40"/> </a>
             <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg" alt="css3" width="40" height="40"/> </a>
             <a href="https://www.w3schools.com/js/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/> </a>
             <a href="https://www.w3schools.com/cs/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg" alt="csharp" width="40" height="40"/> </a>
             <a href="https://www.w3schools.com/cpp/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-original.svg" alt="cplusplus" width="40" height="40"/> </a>
             <a href="https://unrealengine.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/DukeDotDev/DukeDotDev/main/UE_Logo_icon-only_white.svg" alt="unrealengine5" width="40" height="40"/> </a>
+            </p>
 
         </body>
-<br><br><br><br><br>
+<br><br>
     <footer>
         © 2023 by T Worrell | Test 3
     </footer>
