--- a/Resources.html
+++ b/Resources.html
@@ -6,7 +6,7 @@
     <head>
         <link type="text/css" rel="stylesheet" href="DarkMode.css" media="screen" />
         <title>
-            DotDuke | Portfolio
+            DotDuke | Outside Resources
         </title>
     </head>
 
