--- a/Contact.html
+++ b/Contact.html
@@ -19,9 +19,18 @@
                     <li class="active"><a href="Contact.html">Contact Me!</a></li>
             </ul>
 
-            <p>
-                This page is a placeholder!
+            <h1 class="center">
+                Hey there! Looking to contact me? You've come to the right place!
+            </h1>
+<br>
+            <p class="center">Email me <a href="mailto:dukedotdev@gmail.com">here</a>!</p>
+            <p class="center">
+                My average response time is 1-2 buisness days, so please be patient!
             </p>
+<br><br>
+            <h2 class="center">
+                For all inquires related to one-on-one classes, email me <a href="mailto:dotdukeclasses@gmail.com">here</a>. Response times will be slower!
+            </h2>
         </body>
 <br><br>
     <footer>
