Updated CSS file and relinked all pages.
Since there isn't a LightMode.css anymore, not much point in specifying that.

--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
 <html>
 
     <head>
-        <link type="text/css" rel="stylesheet" href="DarkMode.css" media="screen" />
+        <link type="text/css" rel="stylesheet" href="site.css" media="screen" />
         <title>
             DotDuke | Contact Me
         </title>
