Added resources for showcase

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -20,7 +20,7 @@
             </ul>
 
             <p>
-                This page is a placeholder!
+                This is a test! <img src="Resources\StringWriter.png">
             </p>
         </body>
 <br><br>
