--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="Resources.html">Outside Resources</a></li>
                     <li><a href="Contact.html">Contact Me!</a></li>
             </ul>
-            <h1 class="center">Welcome to <A href="https://dukedotdev.github.io">My Site</A>!</h1>
+            <h1 class="center">Welcome to <A href="https://dukedotdev.github.io">DukeDotDev.GitHub.io</A>!</h1>
             <h3 class="center">This page is a resource for those looking to increase their knowledge of Cv2 in Rec Room!</h3>
             <p class="center">
                 I hope you find this little corner of the internet useful in your search for information :]
