--- a/Contact.html
+++ b/Contact.html
@@ -34,7 +34,7 @@
         </body>
 <br><br>
     <footer>
-        © 2023 by T Worrell | Test 6
+        © 2023 by T Worrell | Early Access 6
     </footer>
 
 </html>
