--- a/Resources.html
+++ b/Resources.html
@@ -19,13 +19,19 @@
                     <li><a href="Contact.html">Contact Me!</a></li>
             </ul>
 
-            <p>
-                This page is a placeholder!
-            </p>
+            <h1 class="center">
+                This is a list of resources that I think are great for anyone interested in Cv2.
+            </h1>
+            <h3 class="center">
+                Just to note, the order isn't in beginner to advanced, it's what I personally find more useful. Beginners may find some of the entries too complicated, so be warned!
+            </h3>
+            <ol>
+                <li></li>
+            </ol>
         </body>
 <br><br>
     <footer>
-        © 2023 by T Worrell | Test 6
+        © 2023 by T Worrell | Early Access 6
     </footer>
 
 </html>
