Clean up Navbar
AHHHHHHHHHHHHHHHHH

--- a/Resources.html
+++ b/Resources.html
@@ -12,11 +12,11 @@
 
         <body>
             <ul class="navbar">
-                    <li style="float: left;"><a href="index.html">Home Page</a></li>
-                    <li><a href="Portfolio.html">My Portfolio</a></li>
-                    <li><a href="Showcase.html">Cv2 Showcase</a></li>
+                    <li class="nav" style="float: left;"><a href="index.html">Home Page</a></li>
+                    <li class="nav"><a href="Portfolio.html">My Portfolio</a></li>
+                    <li class="nav"><a href="Showcase.html">Cv2 Showcase</a></li>
                     <li class="active"><a href="Resources.html">Outside Resources</a></li>
-                    <li><a href="Contact.html">Contact Me!</a></li>
+                    <li class="nav"><a href="Contact.html">Contact Me!</a></li>
             </ul>
 
             <h1 class="center">
@@ -26,7 +26,8 @@
                 Just to note, the order isn't in beginner to advanced, it's what I personally find more useful. Beginners may find some of the entries too complicated, so be warned!
             </h3>
             <ol>
-                <li></li>
+                <li class="def">Test</li>
+                <li class="def">Test 2</li>
             </ol>
         </body>
 <br><br>
