--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     </head>
 
         <body>
-            <ul>
+            <ul class="navbar">
                     <li  class="active" style="float: left;"><a href="index.html">Home Page</a></li>
-                    <li><a href="Portfolio.html">My Portfolio</a></li>
-                    <li><a href="Showcase.html">Cv2 Showcase</a></li>
-                    <li><a href="Resources.html">Outside Resources</a></li>
-                    <li><a href="Contact.html">Contact Me!</a></li>
+                    <li class="nav"><a href="Portfolio.html">My Portfolio</a></li>
+                    <li class="nav"><a href="Showcase.html">Cv2 Showcase</a></li>
+                    <li class="nav"><a href="Resources.html">Outside Resources</a></li>
+                    <li class="nav"><a href="Contact.html">Contact Me!</a></li>
             </ul>
             <h1 class="center">Welcome to <A href="https://dukedotdev.github.io">DukeDotDev.GitHub.io</A>!</h1>
             <h3 class="center">This page is a resource for those looking to increase their knowledge of Cv2 in Rec Room!</h3>
