--- a/Showcase.html
+++ b/Showcase.html
@@ -12,11 +12,11 @@
 
         <body>
             <ul class="navbar">
-                    <li style="float: left;"><a href="index.html">Home Page</a></li>
-                    <li><a href="Portfolio.html">My Portfolio</a></li>
+                    <li class="nav" style="float: left;"><a href="index.html">Home Page</a></li>
+                    <li class="nav"><a href="Portfolio.html">My Portfolio</a></li>
                     <li class="active"><a href="Showcase.html">Cv2 Showcase</a></li>
-                    <li><a href="Resources.html">Outside Resources</a></li>
-                    <li><a href="Contact.html">Contact Me!</a></li>
+                    <li class="nav"><a href="Resources.html">Outside Resources</a></li>
+                    <li class="nav"><a href="Contact.html">Contact Me!</a></li>
             </ul>
 
             <p>
