Add Resources page & update CSS
Gave the site an overhauled look and added the Resources page.

--- a/Resources.html
+++ b/Resources.html
@@ -23,11 +23,18 @@
                 This is a list of resources that I think are great for anyone interested in Cv2.
             </h1>
             <h3 class="center">
-                Just to note, the order isn't in beginner to advanced, it's what I personally find more useful. Beginners may find some of the entries too complicated, so be warned!
+                Just to note, the order isn't in beginner to advanced, it's what I personally find more useful. Beginners may find some of the entries complicated, so be warned!
             </h3>
             <ol>
-                <li class="def">Test</li>
-                <li class="def">Test 2</li>
+                <li><a href="https://www.recroomcircuits.com/">RecRoomCircuits</a> | By: PeteBrick [Player]</li>
+                    <p>
+                        RecRoomCircuits is still a WIP site, yet accomplishes so much already. Currently, it's great to look at circuits outside of Rec Room since it visualizes every chip. It's mostly up-to-date, and with easy-to-remember URLs to chips, you can send anyone asking about a certain chip a link quickly. It also has a short description for each circuit, allowing you to learn easily without going in-game.
+                    </p>
+                <br>
+                <li><a href="https://tyleo-rec.github.io/CircuitsV2Resources/">CircuitsV2Resources</a> | By: Tyleo-Rec [Develeoper]</li>
+                    <p>
+                        CircuitsV2Resources is a site that contains many links to resources created by Rec Room itself and by players, letting users choose what may best suit their learning needs. Since it's maintained by a developer at Rec Room, it's not always up-to-date. It does get updates somewhat regularly though, so it's generally good enough.
+                    </p>
             </ol>
         </body>
 <br><br>
