Revoke image test

--- a/Showcase.html
+++ b/Showcase.html
@@ -20,7 +20,7 @@
             </ul>
 
             <p>
-                Image Test 1 <img src="Resources\AllPlayersToString.png">
+                This page is a placeholder!
             </p>
         </body>
 <br><br>
