Added images for showcase
Images allow users to click on them to easily access the full-res version

--- a/Showcase.html
+++ b/Showcase.html
@@ -19,9 +19,14 @@
                     <li class="nav"><a href="Contact.html">Contact Me!</a></li>
             </ul>
 
-            <p>
-                This page is a placeholder!
-            </p>
+            <ul>
+                <li>Test 1 <a href="Resources\AllPlayersToString.png" target="_blank"><img src="Resources\AllPlayersToString.png" height="200" width="300" alt="Chip Name: All Players To String | Inputs: 'ExecIn', Type: Execectution | Outputs: 'ExecOut', Type: Execectution | 'All Players', Type: String List Variable"></a></li>
+                <br>
+                <li>Test 2 <a href="Resources\ConsumableOrderingV2.png" target="_blank"><img src="Resources\ConsumableOrderingV2.png" height="300" width="700" alt="Chip Name: Consumable Ordering System | Inputs: 'Consumable', Type: Consumable Constant | 'In Stock', Type: Bool | 'Item Name', Type: String | 'Is Local Player Staff', Type: Bool | Outputs: N/A"></a></li>
+                <br>
+                <li>Test 3 <a href="Resources\StringWriter.png" target="_blank"><img src="Resources\StringWriter.png" height="200" width="300" alt="Chip Name: String Writer| Inputs: 'Start', Type: Execectution | 'String', Type: String | 'Interval', Type: Float | 'Player', Type: Player | 'SFX Enabled', Type: Bool | 'SFX', Type: SFX Constant | Outputs: 'Start', Type: Execectution"></a></li>
+                <br>
+            </ul>
         </body>
 <br><br>
     <footer>
