Push v1.0 build candidate 1
Bug fix & footer text change

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -37,7 +37,7 @@
         </body>
 <br><br>
     <footer>
-        © 2023 by T Worrell | Early Access 7
+        © 2023 by T Worrell | v1.0 | Build Candidate 1
     </footer>
 
 </html>
