--- a/Contact.html
+++ b/Contact.html
@@ -23,13 +23,13 @@
                 Hey there! Looking to contact me? You've come to the right place!
             </h1>
 <br>
-            <p class="center">Email me <a href="mailto:dukedotdev@gmail.com">here</a>!</p>
+            <p class="center">Email me <a href="mailto:dukedotdev@gmail.com">DukeDotDev@gmail.com</a>!</p>
             <p class="center">
                 My average response time is 1-2 buisness days, so please be patient!
             </p>
 <br><br>
             <h2 class="center">
-                For all inquires related to one-on-one classes, email me <a href="mailto:dotdukeclasses@gmail.com">here</a>. Response times will be slower!
+                For all inquires related to one-on-one classes, email me <a href="mailto:dotdukeclasses@gmail.com">DotDukeClasses@gmail.com</a>. Response times will be slower!
             </h2>
         </body>
 <br><br>
