--- a/Contact.html
+++ b/Contact.html
@@ -34,7 +34,9 @@
         </body>
 <br><br>
     <footer>
-        © 2023 by T Worrell | v1.0 | Build Candidate 2
+        © 2023 by T Worrell | v1.0 | Stable Build
+        <br><br>
+        This site is <a href="https://github.com/DukeDotDev/dukedotdev.github.io" target="_blank">Open Source</a> and is powered by <a href="https://github.com" target="_blank">Github</a>!
     </footer>
 
 </html>
